@@ -59,10 +59,6 @@
 #include "pixmaps/gnomeicu-occ.xpm"
 #include "pixmaps/gnomeicu-ffc.xpm"
 
-#if (defined(__SVR4) && !defined(_SOCKLEN_T)) || defined(__MACH__)
-typedef uint32_t        socklen_t;
-#endif
-
 /* constants to identify proto_opts */
 #define USEROPT_AUTH      0
 #define USEROPT_AUTHPORT  1
